tests/fixtures/syntax/valid/non_empty_action.repor
case "non-empty action" {
  $ echo hello
  assert { exit 0 }
}
