tests/fixtures/syntax/invalid/empty_action.repor
case "empty action" {
  $
  assert { exit 0 }
}
